# solana-shield

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  agent.json  drift.html  drift.txt  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.ralph/: @fix_plan.md
_next/static/chunks/: 0_62cc~f65xq8.js  0avcotwsq_z23.js  0cudlbiubub2~.js  0g_nn0pi91ekt.js  0gwcdg220i4e6.js  0w392pjzwk68_.js  11v-4v-ua6flf.css  turbopack-093zb95xi3xhl.js
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
ai/: agent-registration.json  design-progress.md  design-research.md  memory.md  progress.md  x-article-draft.md  x-article-final.md
dashboard/: package.json  pnpm-lock.yaml
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/drift/: page.tsx
drift/: __next._head.txt  __next._index.txt  __next._tree.txt  __next.drift.__PAGE__.txt
programs/guardian/: Cargo.toml
programs/guardian/src/: lib.rs
programs/test-vault/: Cargo.toml
programs/test-vault/src/: lib.rs
proposals/: cover.html  proposal-1-radar.html  proposal-2-pulse.html  proposal-3-grid.html
scripts/: register-agent.ts  self-attack.ts  setup-devnet.ts
tests/: guardian.ts
watcher/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
watcher/src/: alerts.ts  db.ts  goldrush.ts  invariants.ts  safety.ts  server.ts  types.ts  webhook.ts
