[package]
name = "test-vault"
version = "0.1.0"
description = "Simple SOL vault for self-attack demo — checks Guardian is_paused before withdraw"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
guardian = { path = "../guardian", features = ["cpi"] }
